// Copyright 2019 SolarNetwork Foundation.
// Copyright 2021 Ecogy Energy.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package api.esi;

option go_package = "github.com/elijahjpassmore/api/esi";

import "api/esi/der_route.proto";
import "api/esi/time_concept.proto";
import "api/esi/time_unit.proto";
import "api/esi/timestamp_range.proto";

// Request criteria for datum.
message DatumRequest {

  // The routing info.
  DerRoute route = 1;

  oneof time_style_oneof {

    // A date range.
    TimestampRange time_range = 2;

    // A conceptual time.
    TimeConcept time_concept = 3;

  }

  // The requested time unit of the resulting datum.
  TimeUnit time_unit = 4;

  // The requested coalescence of time units, for example for 5-minute time spans then
  // time_unit_coalescence = 5 and time_unit = MINUTE. A value of 0 or 1 mean no coalescing is
  // requested.
  uint32 time_unit_coalescence = 5;

}
