// Copyright 2019 SolarNetwork Foundation.
// Copyright 2021 Ecogy Energy.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package api.esi;

option go_package = "github.com/elijahjpassmore/api/esi";

import "api/esi/der_route.proto";
import "api/esi/uuid.proto";

// Status information for a price map offer.
message PriceMapOfferFeedback {

  // The routing info.
  DerRoute route = 1;

  // The globally unique ID of the offer this status is for.
  Uuid offer_id = 2;

  // Enumeration of possible obligation status values.
  // None is empty because protocol buffer transit reads 0 as nil.
  enum ObligationStatus {
    NONE = 0;
    UNKNOWN = 1;
    SATISFIED = 2;
    DISPUTED = 3;
  }

  // The offer status.
  ObligationStatus obligation_status = 3;

}
